--- a/css/style.css
+++ b/css/style.css
@@ -65,6 +65,7 @@ padding: 3px 8px;
 
 .red { background:#ea6153;}
 .cloud { background:#ecf0f1;}
+.moccasin{background:#FFE4B5;}
 
 .ML { margin-left:8.2%; }
  
