--- a/css/style.css
+++ b/css/style.css
@@ -66,6 +66,7 @@ padding: 3px 8px;
 .red { background:#ea6153;}
 .cloud { background:#ecf0f1;}
 .moccasin{background:#FFE4B5;}
+.DeepSkyBlue{background: #00BFFF}
 
 .ML { margin-left:8.2%; }
  
